fixed glasses connector spacing and removed bottom connector

--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -166,8 +166,8 @@ $form-color: #e8f5e9;
     width: 60.5%;
     background: lightblue;
     height:44%;
-    top:31%;
-    left:32%;
+    left: 32.2%;
+    top: 30.8%;
     z-index:7;
        -ms-transform: skew(-50deg, 5deg); /* IE 9 */
     -webkit-transform: skew(-50deg, 5deg); /* Safari */
